<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="@color/text"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/rely1"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginVertical="150dp"
            android:layout_marginLeft="20dp"
            android:background="@color/dflt"
            android:gravity="center"
            android:textColor="@color/on"
            android:textOff="@string/lte1off"
            android:textOn="@string/lte1on"
            android:textSize="25dp"
            />

        <ToggleButton
            android:id="@+id/rely2"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginVertical="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/dflt"
            android:gravity="center"
            android:textColor="@color/on"
            android:textOff="@string/lte2off"
            android:textOn="@string/lte2on"
            android:textSize="25dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/rely3"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginVertical="270dp"
            android:layout_marginLeft="20dp"
            android:background="@color/dflt"
            android:gravity="center"
            android:textColor="@color/on"
            android:textOff="@string/lte3off"
            android:textOn="@string/lte3on"
            android:textSize="25dp"
            />

        <ToggleButton
            android:id="@+id/rely4"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginVertical="270dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/dflt"
            android:gravity="center"
            android:textColor="@color/on"
            android:textOff="@string/lte4off"
            android:textOn="@string/lte4on"
            android:textSize="25dp"
             />
    </LinearLayout>
    <TextView
        android:id="@+id/footer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:text="@string/powered"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        />

</RelativeLayout>